--- a/src/css/custom.css
+++ b/src/css/custom.css
@@ -19,6 +19,10 @@
     --docusaurus-highlighted-code-line-bg: rgba(0, 0, 0, 0.1);
 }
 
+.hero__title {
+    font-size: 2rem;
+}
+
 
 /* For readability concerns, you should choose a lighter palette in dark mode. */
 
